add more tests for aggregates immutability
GitOrigin-RevId: acd1fdff325e99aa0ef78170557992ac5348f137